feat(dialogue): 添加对话触发模式和事件类型支持
- 引入 DialogueTriggerMode 和 DialogueEventType 枚举类型
- 扩展 DialogueEntry 记录类，增加 triggerMode 和 eventType 字段
- 添加向后兼容的构造函数和默认值设置
- 在 DialogueManager 中实现事件驱动型对话选择逻辑
- 支持在特定游戏事件发生时触发对话
- 修改 Codec 和 StreamCodec 以支持新字段的序列化