@@ -12,6 +12,7 @@ import io.github.hawah.shakenstir.client.render.entity.BartenderModel;
 import io.github.hawah.shakenstir.content.blockEntity.BarMenuBlockEntity;
 import io.github.hawah.shakenstir.content.dataComponent.DataComponentTypeRegistries;
 import io.github.hawah.shakenstir.content.dialogue.DialogueData;
+import io.github.hawah.shakenstir.content.dialogue.DialogueEventType;
 import io.github.hawah.shakenstir.content.dialogue.DialogueManager;
 import io.github.hawah.shakenstir.content.entity.ai.activity.Activities;
 import io.github.hawah.shakenstir.content.entity.ai.memory.Memories;
@@ -303,6 +304,13 @@ public class BartenderEntity extends AbstractInventoryMob implements OwnableEnti
         if (!currentActivity.equals(previousActivity) || !currentActivity.equals(lastAiActivity)) {
             // AI 活动发生切换，尝试触发状态变化对话
             tryTriggerDialogueOnStateChange(level, currentActivity);
+            // TODO: 人工审查 - 2026-06-24 - 修正事件驱动型对话触发：LEAVE 使用旧活动，ENTER 使用新活动
+            // 触发离开旧活动事件（以 previousActivity 作为条件评估上下文）
+            if (!previousActivity.equals(currentActivity)) {
+                tryTriggerEventDialogue(level, DialogueEventType.LEAVE_ACTIVITY, previousActivity);
+            }
+            // 触发进入新活动事件（以 currentActivity 作为条件评估上下文）
+            tryTriggerEventDialogue(level, DialogueEventType.ENTER_ACTIVITY, currentActivity);
         }
         lastAiActivity = currentActivity;
 
@@ -332,7 +340,7 @@ public class BartenderEntity extends AbstractInventoryMob implements OwnableEnti
     }
 
     protected static OptionalInt convertParrotVariant(Optional<Parrot.Variant> variant) {
-        return variant.<OptionalInt>map(v -> OptionalInt.of(v.getId())).orElse(OptionalInt.empty());
+        return variant.map(v -> OptionalInt.of(v.getId())).orElse(OptionalInt.empty());
     }
 
     @Override
@@ -351,8 +359,14 @@ public class BartenderEntity extends AbstractInventoryMob implements OwnableEnti
         saveDialogueData(output);
     }
 
+    // TODO: 人工审查 - 2026-06-23 - mobInteract 新增 PLAYER_INTERACT 事件驱动型对话触发
     @Override
     protected InteractionResult mobInteract(Player player, InteractionHand hand) {
+        // 触发玩家交互事件驱动型对话（仅服务端）
+        if (!level().isClientSide() && level() instanceof ServerLevel serverLevel) {
+            tryTriggerEventDialogue(serverLevel, DialogueEventType.PLAYER_INTERACT, null);
+        }
+
         ItemStack itemInHand = player.getItemInHand(hand);
         if (getOwner() != null && player.is(getOwner())) {
             if (itemInHand.has(DataComponentTypeRegistries.BAR_AREA)) {
@@ -810,6 +824,37 @@ public class BartenderEntity extends AbstractInventoryMob implements OwnableEnti
         }
     }
 
+    // TODO: 人工审查 - 2026-06-23 - 新增事件驱动型对话触发方法
+    //   根据事件类型调用 DialogueManager.selectEventDialogueResult 进行匹配
+    // TODO: 人工审查 - 2026-06-24 - 新增 activityName 参数，用于 LEAVE_ACTIVITY/ENTER_ACTIVITY 事件传递正确的活动上下文
+
+    /**
+     * 事件驱动型对话触发（Event-driven Dialogue Trigger）。
+     * 根据指定的事件类型，查找匹配的 EVENT_DRIVEN 条目并立即触发对话。
+     * 事件驱动型对话仅在条件满足且冷却结束时触发，触发后进入冷却。
+     *
+     * @param level        服务端世界
+     * @param eventType    触发的事件类型
+     * @param activityName 显式活动上下文（用于 LEAVE_ACTIVITY / ENTER_ACTIVITY 事件的条件评估和变量替换；{@code null} 表示从 Brain 实时获取）
+     */
+    private void tryTriggerEventDialogue(ServerLevel level, DialogueEventType eventType, @Nullable String activityName) {
+        if (dialogueData.isEmpty()) return;
+        if (dialogueCooldownTicks > 0) return;
+
+        Player player = (Player) getBrain().getMemory(MemoryModuleType.INTERACTION_TARGET)
+                .filter(e -> e instanceof Player).orElse(null);
+
+        DialogueManager.SelectionResult result = DialogueManager.selectEventDialogueResult(
+                dialogueData, level, this, player, dialoguePlayedTracker, eventType, activityName
+        );
+
+        if (result.hasResult()) {
+            deliverDialogue(level, result);
+            dialogueCooldownTicks = 60 * result.cooldownMultiplier();
+            ambientDialogueTimer = 0;
+        }
+    }
+
     /**
      * 将选中的对话文本发送到客户端。
      * 如果文本包含 [BR] (case‑insensitive) 标记，则在标记处拆分，每个拆分段依次排入队列逐条播放；
@@ -820,7 +865,7 @@ public class BartenderEntity extends AbstractInventoryMob implements OwnableEnti
 
         if (segments.size() == 1) {
             // 无 [BR] 标记：单条气泡
-            speakServer(segments.get(0), 100, false);
+            speakServer(segments.getFirst(), 100, false);
         } else {
             // 有 [BR] 标记：拆分为多条依次排入队列
             for (Component segment : segments) {
